# input4mips_validation

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  TODO.md  TODOS-MR.md  environment-docs.yml  logging-config-sample.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci.yaml  deploy.yaml  install-conda.yaml  install-pypi.yaml  install.yaml  release.yaml
changelog/: 10.trivial.md  100.feature.md  100.improvement.md  101.fix.md  102.breaking.md  102.feature.md  102.trivial.md  103.breaking.md  104.fix.md  106.breaking.md  106.improvement.md  107.breaking.md  107.feature.md  107.improvement.md  11.trivial.md  111.breaking.md  113.improvement.md  116.feature.md  116.improvement.md  116.trivial.md  119.fix.md  12.trivial.md  120.trivial.md  121.fix.md  121.trivial.md  13.fix.md  15.breaking.md  16.feature.md  17.breaking.md  18.feature.md  2.feature.md  20.trivial.md  21.breaking.md  22.trivial.md  23.trivial.md  24.trivial.md  25.feature.md  26.trivial.md  27.fix.md  28.docs.md  (+98 more)
docs/: NAVIGATION.md  changelog.md  command_line_interface.md  development.md  explanation.md  gen_doc_stubs.py  index.md  installation.md  reference.md
docs/assets/: style.css
docs/how-to-guides/: CH4-em-biomassburning_input4MIPs_emissions_CMIP_CR-CMIP-0-2-0_gn_200001-201012.nc  fixed_CH4-em-biomassburning_input4MIPs_emissions_CMIP_CR-CMIP-0-2-0_gn_200001-201012.nc  how-to-manage-a-database.py  how-to-prepare-a-file-for-submission-to-input4mips.py  how-to-upload-to-ftp.py  how-to-validate-a-single-file.py  how-to-validate-file.py  how-to-write-a-single-file-in-the-drs.py  how-to-write-a-single-valid-file-dom-helper.py  how-to-write-a-single-valid-file.py  index.md
docs/source/: changelog.md  command_line_interface.md  conf.py  development.md  index.md  notebooks.md
docs/source/api/: input4mips_validation.attrs_helpers.rst  input4mips_validation.cli.cli_logging.rst  input4mips_validation.cli.root.rst  input4mips_validation.cli.rst  input4mips_validation.cli.validate_file.rst  input4mips_validation.controlled_vocabularies.constants.rst  input4mips_validation.controlled_vocabularies.file_id.rst  input4mips_validation.controlled_vocabularies.inference.rst  input4mips_validation.controlled_vocabularies.rst  input4mips_validation.controlled_vocabularies.validators.comparison_with_cvs.rst  input4mips_validation.controlled_vocabularies.validators.creation_date.rst  input4mips_validation.controlled_vocabularies.validators.ds_metadata_consistency.rst  input4mips_validation.controlled_vocabularies.validators.email.rst  input4mips_validation.controlled_vocabularies.validators.rst  input4mips_validation.controlled_vocabularies.validators.uuid.rst  input4mips_validation.cvs_handling.attrs_helpers.rst  input4mips_validation.cvs_handling.exceptions.rst  input4mips_validation.cvs_handling.input4MIPs.activity_id.rst  input4mips_validation.cvs_handling.input4MIPs.cv_loading.rst  input4mips_validation.cvs_handling.input4MIPs.cvs.rst  input4mips_validation.cvs_handling.input4MIPs.cvs_inference.rst  input4mips_validation.cvs_handling.input4MIPs.cvs_validation.rst  input4mips_validation.cvs_handling.input4MIPs.dataset_validation.rst  input4mips_validation.cvs_handling.input4MIPs.general_validation.rst  input4mips_validation.cvs_handling.input4MIPs.institution_id.rst  input4mips_validation.cvs_handling.input4MIPs.raw_cv_loading.rst  input4mips_validation.cvs_handling.input4MIPs.rst  input4mips_validation.cvs_handling.input4MIPs.serialisation.rst  input4mips_validation.cvs_handling.input4MIPs.source_id.rst  input4mips_validation.cvs_handling.rst  input4mips_validation.cvs_handling.serialisation.rst  input4mips_validation.dataset.rst  input4mips_validation.exceptions.rst  input4mips_validation.main.rst  input4mips_validation.metadata.rst  input4mips_validation.operations.rst  input4mips_validation.rst  input4mips_validation.testing.rst  input4mips_validation.time.rst  input4mips_validation.validation.rst  (+1 more)
docs/source/notebooks/: basic-demo.py
docs/stylesheets/: style.css
scripts/: add-input4mips-info-to-mac.py  changelog-to-release-template.py  create-test-cvs.py  create-test-data-for-docs.py  download-cf-standard-name-table.py  esgf-scrape-to-database.py  example-database-generation.py  example-database-validation.py  example-file-validation.sh  load-pcmdi-gh-main.py  print-conda-recipe-pins.py  test-install.py  write-auto-generated-classes.py  write-docs-environment.py  write-test-cvs.py  write-test-data-for-docs.py
src-old/input4mips_validation_old/: dataset.py  metadata.py
src/input4mips_validation/: database.py  dataset.py  dataset_writing_helpers.py  deprecation.py  hashing.py  io.py  logging.py  logging_config.py  main.py  metadata.py  parallelisation.py  serialisation.py  testing.py  upload_ftp.py  validation.py  xarray_helpers.py
src/input4mips_validation/cli/: __init__.py  cli_logging.py  common_arguments_and_options.py  db.py  logging.py  root.py  validate_file.py
src/input4mips_validation/controlled_vocabularies/: __init__.py  constants.py
src/input4mips_validation/cvs/: __init__.py  activity_id.py  author.py  cvs.py  drs.py  exceptions.py  institution_id.py  license.py  loading.py  loading_raw.py  source_id.py
src/input4mips_validation/cvs_handling/: exceptions.py
src/input4mips_validation/database/: __init__.py  creation.py  database.py  raw.py
src/input4mips_validation/dataset/: dataset.py  metadata.py  metadata_data_producer_minimum.py  (+1 more)
src/input4mips_validation_old/: dataset.py  metadata.py  xarray_helpers.py
stubs/: cftime.pyi
stubs/iris/: __init__.pyi  cube.pyi
stubs/ncdata/: iris_xarray.pyi
stubs/pooch/: __init__.pyi  utils.pyi
tests-old/integration/: test_cli.py  test_input4mips_integration.py
tests-old/unit/: test_time.py
tests/integration/: test_cli.py  test_cli_integration.py  test_dataset_integration.py  test_input4mips_integration.py  test_valid_file_integration.py
tests/unit/: test_database.py  test_operations.py  test_xarray_helpers.py
(+90 files in other folders)
