[project]
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-resource.com" },
]
requires-python = ">=3.9"
dependencies = [
    "scitools-iris>=3.0",
    "netcdf4>=1.0",
    "numpy<2.0",
    "cfchecker>=4.1.0",
    "cftime",
    "attrs",
    "cattrs",
    "cf-xarray",
    "loguru",
    "ncdata",
    "pandas",
    "pint",
    "pint-xarray",
    "pooch",
    "tqdm",
    "typer",
    "typing-extensions",
    "validators",
    "xarray",
]
name = "input4mips-validation"
version = "0.19.2a1"
description = "Validation of input4MIPs data (checking file formats, metadata etc.)."
readme = "README.md"

[project.license]
text = "BSD-3-Clause"

[project.optional-dependencies]
loguru-config = [
    "loguru-config",
]
dev = [
    "pre-commit>=3.7.1",
    "mypy>=1.10.1",
    "towncrier>=23.11.0,<24",
    "packaging>=24.1.0",
    "pandas-stubs>=2.2.2.240603",
    "tomli>=2.0.1",
    "types-tqdm>=4.66.0.20240417",
    "liccheck>=0.9.2,<0.10",
    # Required for liccheck
    "setuptools>=70.0.0",
    "pip>=24.2",
    # Required to get type hints
    "loguru>=0.7.3",
    "netcdf4>=1.7.2",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-section-index>=0.3.9",
    "mkdocs-autorefs>=1.0.1",
    "mkdocs-jupyter>=0.25.1",
    "myst-nb>=1.1.1",
    "jupyterlab>=4.2.0",
    "jupytext>=1.16.3",
]
notebooks = [
    "jupyterlab>=4.2.0",
    "jupytext>=1.16.3",
]
tests = [
    "pytest>=8.2.2",
    "coverage>=7.6.0",
    "pytest-cov>=5.0.0",
    "pytest-regressions>=2.5",
]

[project.scripts]
input4mips-validation = "input4mips_validation.cli:app"

[tool.pixi.feature.py39.dependencies]
python = "3.9.*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.environments.default]
features = [
    "py39",
]

[tool.pixi.environments.docs]
features = [
    "docs",
]
solve-group = "default"

[tool.pixi.environments.all-dev]
features = [
    "loguru-config",
    "dev",
    "docs",
    "notebooks",
    "tests",
]
solve-group = "default"

[tool.pixi.environments.py39]
features = [
    "py39",
]
solve-group = "default"

[tool.pixi.environments.py310]
features = [
    "py310",
]

[tool.pixi.environments.py311]
features = [
    "py311",
]

[tool.pixi.environments.test-py39]
features = [
    "tests",
]
solve-group = "default"

[tool.pixi.environments.test-py310]
features = [
    "tests",
    "py310",
]

[tool.pixi.environments.test-py311]
features = [
    "tests",
    "py311",
]

[tool.pixi.project]
channels = [
    "conda-forge",
]
platforms = [
    "osx-64",
    "osx-arm64",
    "linux-64",
    "linux-aarch64",
    "win-64",
]

[tool.pixi.pypi-dependencies.input4mips_validation]
path = "."
editable = true

[tool.pixi.tasks]

[tool.pixi.dependencies]
cfchecker = ">=4.1.0"
cftime = ">=1.0"
iris = ">=3.0"
netcdf4 = ">=1.0"
numpy = "<2.0"

[tool.pdm.build]
locked = true
includes = [
    "src/input4mips_validation",
    "LICENCE",
]

[tool.coverage.run]
source = [
    "src",
]
branch = true

[tool.coverage.report]
fail_under = 70
skip_empty = true
show_missing = true
exclude_also = [
    "if TYPE_CHECKING",
]

[tool.mypy]
strict = true
disallow_any_unimported = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
follow_imports = "normal"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
src = [
    "src",
]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [
    "PD002",
]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.per-file-ignores]
"test*.py" = [
    "D",
    "S101",
    "PLR2004",
]
"docs/*" = [
    "D100",
    "E402",
    "S101",
]
"scripts/*" = [
    "S101",
]
"stubs/*" = [
    "PLR0913",
]

[tool.ruff.lint.isort]
known-first-party = [
    "src",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.towncrier]
package = "input4mips_validation"
package_dir = "src"
filename = "docs/changelog.md"
directory = "changelog/"
title_format = "## Input4MIPs validation {version} ({project_date})"
underlines = [
    "",
    "",
    "",
]
issue_format = "[#{issue}](https://github.com/climate-resource/input4mips_validation/pull/{issue})"
type = [
    { directory = "breaking", name = "âš ï¸ Breaking Changes", showcontent = true },
    { directory = "deprecation", name = "ðŸ—‘ï¸ Deprecations", showcontent = true },
    { directory = "feature", name = "ðŸ†• Features", showcontent = true },
    { directory = "improvement", name = "ðŸŽ‰ Improvements", showcontent = true },
    { directory = "fix", name = "ðŸ› Bug Fixes", showcontent = true },
    { directory = "docs", name = "ðŸ“š Improved Documentation", showcontent = true },
    { directory = "trivial", name = "ðŸ”§ Trivial/Internal Changes", showcontent = false },
]

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "bsd license",
    "BSD 3-Clause",
    "CC0",
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "Apache License, Version 2.0",
    "Historical Permission Notice and Disclaimer (HPND)",
    "isc license",
    "isc license (iscl)",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "LGPLv2+",
    "GNU Lesser General Public License v2 (LGPLv2)",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "mit",
    "mit license",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "python software foundation",
    "python software foundation license",
    "zpl 2.1",
]
unauthorized_licenses = [
    "agpl",
    "gnu agpl",
    "gpl v3",
    "gplv3",
    "gpl v2",
    "gplv2",
    "gpl v1",
    "gplv1",
]

[build-system]
requires = [
    "pdm-backend",
    "pdm-build-locked",
]
build-backend = "pdm.backend"
